fixes var naming and allows customising password length and TLS version

--- a/templates/resetok.html
+++ b/templates/resetok.html
@@ -4,11 +4,11 @@
   <head>
   	<link rel="stylesheet" type="text/css" href="style.css" />
     <meta charset="utf-8">
-    <title>Clave reseteada!</title>
+    <title>Password reset!</title>
   </head>
   <body>
   <div id="estilo" class="formulario">
-    <h1>Tu clave ha sido cambiada correctamente. Ya puedes iniciar sesi&oacute;n con ella.</h1>
+    <h1>Your account now has a new password! Please use it to log in again.</h1>
   </div>
   </body>
 </html>
