--- a/templates/sendmailok.html
+++ b/templates/sendmailok.html
@@ -4,11 +4,11 @@
   <head>
   	<link rel="stylesheet" type="text/css" href="style.css" />
     <meta charset="utf-8">
-    <title>Enlace enviado!</title>
+    <title>Password change request sent!</title>
   </head>
   <body>
   <div id="estilo" class="formulario">
-    <h1>Acabamos de enviarte un email con un enlace que tendr&aacute;s que visitar.</h1>
+    <h1>Please check your email for a password reset message.</h1>
   </div>
   </body>
 </html>
