--- a/templates/token.html
+++ b/templates/token.html
@@ -3,11 +3,11 @@
   <head>
     <link rel="stylesheet" type="text/css" href="style.css" />
     <meta charset="utf-8">
-    <title>Reseto de la clave de tu cuenta Jabber</title>
+    <title>Reset your Jabber account password</title>
   </head>
   <body>
   <div id="estilo" class="formulario">
-    <h1>Reseteo de la clave de tu cuenta Jabber</h1>
+    <h1>Reset your Jabber account password</h1>
     <form action="{path}?{token}" method="POST">
       <p class="error">{notice}</p>
           <label>
@@ -17,7 +17,7 @@
           <div class="spacer"></div>
 
           <label>
-	    Contrase&ntilde;a:
+	    New password:
 	  </label>
           <input name="newpassword" type="password" required size="35">
           <div class="spacer"></div>
