--- a/templates/changepass.html
+++ b/templates/changepass.html
@@ -3,32 +3,31 @@
   <head>
   <meta charset="utf-8">
   <link rel="stylesheet" type="text/css" href="style.css" />
-  <title>Reseteo de la clave de tu cuenta Jabber</title>
+  <title>Jabber password reset</title>
   </head>
   <body>
     <div id="estilo" class="formulario">
-      <h1>Reseteo de la clave de tu cuenta Jabber</h1>
+      <h1>Reset your Jabber account password</h1>
       <form action="{path}" method="POST">
 		<p class="error">{notice}</p>
 		<label>
-		Usuario:
-		<span class="small">Introduce tu usuario</span>
+		Username:
+		<span class="small">Your account name</span>
 		</label>
 		<input type="text" name="username" required>@{hostname}
 		<div class="spacer"></div>
 		<label>
 		Email:
-		<span class="small">Introduce tu email</span>
+		<span class="small">Email address from your vCard</span>
 		</label>
 		<input type="text" name="email" required>
 		<div class="spacer"></div>
 
-		<input id="button" class="button" type="submit" value="Enviar!">
+		<input id="button" class="button" type="submit" value="Submit">
 		<div class="spacer"></div>
       </form>
       <p>
-      Al pulsar sobre el bot&oacute;n, se enviar&aacute; a la direcci&oacute;n de correo que figura
-      en tu vCard un enlace en el que deber&aacute;s entrar.<br />
+        The email address you enter must match the one in your account vCard.
       </p>
     </div>
   </body>
